# xqshare

./: .env.client.example  .env.server.example  .gitignore  README.md  pyproject.toml
doc/: tailscale-auto-setup.md
scripts/: build-server-standalone.ps1  run-server-tailscale.ps1  test-client-tailscale.ps1  test-client-tailscale.sh  xqshare-server-bootstrap.ps1
tailscale-proxy/: README.md  go.mod  go.sum  main.go
tests/: test_tunnel.py
xqshare/: __init__.py  client.py  server.py  tunnel.py
xqshare/tools/: common.py  xtdata.py  xttrader.py
