[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xqshare"
version = "1.1.1"
description = "Xtreme Quant Share - eXtreme transparent sharing proxy for XtQuant on macOS/Linux"
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.8"
authors = [
    {name = "Jason Hu", email = "63170682@qq.com"}
]
keywords = [
    "xtquant",
    "rpyc", 
    "remote",
    "proxy",
    "quant",
    "stock",
    "trading",
    "qmt",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]
dependencies = [
    "rpyc>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
]

[project.scripts]
xqshare-server = "xqshare.server:main"
xtdata = "xqshare.tools.xtdata:main"
xttrader = "xqshare.tools.xttrader:main"

[project.urls]
Homepage = "https://gitee.com/jdragonhu/xqshare"
Documentation = "https://gitee.com/jdragonhu/xqshare#readme"
Repository = "https://gitee.com/jdragonhu/xqshare"
Issues = "https://gitee.com/jdragonhu/xqshare/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["xqshare*"]

[tool.setuptools.package-data]
"xqshare" = ["bin/*", "*.md", "*.txt"]
